Update; fix the small spacing on arrow

--- a/styles/helpers/tooltip.css
+++ b/styles/helpers/tooltip.css
@@ -33,7 +33,7 @@ button.tooltip {
     &::after {
       bottom: 100%;
       left: 50%;
-      margin-bottom: 11px;
+      margin-bottom: 10px;
       transform: translate(-50%, 10px);
       transform-origin: top;
     }
@@ -61,7 +61,7 @@ button.tooltip {
     }
     &::after {
       left: 50%;
-      margin-top: 11px;
+      margin-top: 10px;
       top: 100%;
       transform: translate(-50%, -10px);
     }
@@ -89,7 +89,7 @@ button.tooltip {
       transform: translate(10px, -50%);
     }
     &::after {
-      margin-right: 11px;
+      margin-right: 10px;
       right: 100%;
       top: 50%;
       transform: translate(10px, -50%);
@@ -118,7 +118,7 @@ button.tooltip {
     }
     &::after {
       left: 100%;
-      margin-left: 11px;
+      margin-left: 10px;
       top: 50%;
       transform: translate(-10px, -50%);
     }
